[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/cave_generator/PropertySlider.gd" type="Script" id=1]

[node name="PropertySlider" type="HBoxContainer"]
margin_right = 127.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 0
script = ExtResource( 1 )

[node name="NameLabel" type="Label" parent="."]
margin_top = 1.0
margin_right = 54.0
margin_bottom = 15.0
size_flags_horizontal = 2
text = "property"
percent_visible = 1.25
max_lines_visible = 1

[node name="ControlSlider" type="HSlider" parent="."]
margin_left = 58.0
margin_right = 118.0
margin_bottom = 16.0
rect_min_size = Vector2( 60, 0 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
max_value = 1.0
step = 0.01
value = 0.2

[node name="ValueLabel" type="Label" parent="."]
margin_left = 122.0
margin_top = 1.0
margin_right = 158.0
margin_bottom = 15.0
size_flags_horizontal = 0
text = "  0.20"
align = 2
max_lines_visible = 1
